syntax = "proto3";

package com.skriptvalley.keyhouse;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

// Use the correct go_package option
option go_package = "/backend;backend";

// Keyhouse service definition
service Backend {
  // GetStatus RPC
  // Returns the current status of the Keyhouse service
  rpc GetStatus (StatusRequest) returns (StatusResponse) {
    option (google.api.http) = {
      get: "/v1/status"
    };
  }
}

// Request message for GetStatus
message StatusRequest {}

// Response message for GetStatus
message StatusResponse {
  // Name of the service
  string service = 1;
  
  // Version of the service
  string version = 2;
  
  // Current status of the service (e.g., "OK", "ERROR")
  string status = 3;
  
  // Timestamp when the status was retrieved
  google.protobuf.Timestamp timestamp = 4;
}